--- a/src/AzureNaPratica.Serverless.Domain/AzureNaPratica.Serverless.Domain.csproj
+++ b/src/AzureNaPratica.Serverless.Domain/AzureNaPratica.Serverless.Domain.csproj
@@ -1,11 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net5.0</TargetFramework>
+		<ProjectGuid>a04e6fe7-16fd-4265-a7bd-f79f3a2b41e3</ProjectGuid>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="FluentValidation" Version="10.3.4" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="FluentValidation" Version="10.3.4" />
+		<PackageReference Include="MongoDB.Driver" Version="2.13.2" />
+	</ItemGroup>
 
 </Project>
