--- a/src/AzureNaPratica.Serverless.Function/local.settings.json
+++ b/src/AzureNaPratica.Serverless.Function/local.settings.json
@@ -2,6 +2,50 @@
   "IsEncrypted": false,
   "Values": {
     "AzureWebJobsStorage": "",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated",
+    "DatabaseName": "AzureNaPratica",
+    "TopicCourse": "sbt-course",
+    "TopicStudent": "sbt-student"
+  },
+  "ConnectionStrings": {
+    "MongoDbConnectionString": "",
+    "ServiceBus": ""
+  },
+  "ExternalServices": {
+    "LucyNumber": {
+      "url": "https://func-azurenapratica-numerodasorte-dev.azurewebsites.net",
+      "ApiKey": ""
+    }
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console" ],
+    "MinimumLevel": "Debug",
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "theme": "Serilog.Sinks.SystemConsole.Themes.AnsiConsoleTheme::Code, Serilog.Sinks.Console",
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj} <s:{SourceContext}>{NewLine}{Exception}"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Destructure": [
+      {
+        "Name": "ToMaximumDepth",
+        "Args": { "maximumDestructuringDepth": 4 }
+      },
+      {
+        "Name": "ToMaximumStringLength",
+        "Args": { "maximumStringLength": 100 }
+      },
+      {
+        "Name": "ToMaximumCollectionCount",
+        "Args": { "maximumCollectionCount": 10 }
+      }
+    ],
+    "Properties": {
+      "Application": "AzureNaPratica.Serverless"
+    }
   }
 }
