--- a/src/AzureNaPratica.Serverless.Infra.MessageBroker/AzureNaPratica.Serverless.Infra.MessageBroker.csproj
+++ b/src/AzureNaPratica.Serverless.Infra.MessageBroker/AzureNaPratica.Serverless.Infra.MessageBroker.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 	  <ProjectGuid>d9875cab-fd20-48e6-808b-6c8ed0943e57</ProjectGuid>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Azure.Messaging.ServiceBus" Version="7.4.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
