--- a/src/AzureNaPratica.Serverless.Domain/AzureNaPratica.Serverless.Domain.csproj
+++ b/src/AzureNaPratica.Serverless.Domain/AzureNaPratica.Serverless.Domain.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<ProjectGuid>a04e6fe7-16fd-4265-a7bd-f79f3a2b41e3</ProjectGuid>
 	</PropertyGroup>
 
