--- a/src/AzureNaPratica.Serverless.Infra.Database/AzureNaPratica.Serverless.Infra.Database.csproj
+++ b/src/AzureNaPratica.Serverless.Infra.Database/AzureNaPratica.Serverless.Infra.Database.csproj
@@ -1,12 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net5.0</TargetFramework>
+		<TargetFramework>net6.0</TargetFramework>
 		<ProjectGuid>aa91e899-e9b2-4d81-819d-43128bc74d03</ProjectGuid>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Options" Version="5.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
 		<PackageReference Include="MongoDB.Bson" Version="2.13.2" />
 	</ItemGroup>
 
