--- a/.github/workflows/main_func-azurenapratica-serverless-dev.yml
+++ b/.github/workflows/main_func-azurenapratica-serverless-dev.yml
@@ -9,6 +9,10 @@ on:
       - main
   workflow_dispatch:
 
+defaults:
+  run:
+    working-directory: src
+
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '6.0.x' # set this to the dotnet version to use
