--- a/.github/workflows/main_func-azurenapratica-serverless-dev.yml
+++ b/.github/workflows/main_func-azurenapratica-serverless-dev.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - main
   workflow_dispatch:
+  
+defaults:
+  run:
+    working-directory: src
 
 env:
   AZURE_FUNCTIONAPP_PACKAGE_PATH: '.' # set this to the path to your web app project, defaults to the repository root
