--- a/.github/workflows/main_func-azurenapratica-serverless-dev.yml
+++ b/.github/workflows/main_func-azurenapratica-serverless-dev.yml
@@ -14,7 +14,7 @@ defaults:
     working-directory: src
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: './src/AzureNaPratica.Serverless.Function/' # set this to the path to your web app project, defaults to the repository root
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'src/AzureNaPratica.Serverless.Function/' # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '6.0.x' # set this to the dotnet version to use
 
 jobs:
