--- a/.github/workflows/main_func-azurenapratica-serverless-dev.yml
+++ b/.github/workflows/main_func-azurenapratica-serverless-dev.yml
@@ -32,7 +32,7 @@ jobs:
       - name: 'Resolve Project Dependencies Using Dotnet'
         shell: bash
         run: |
-          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+          cd ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
           dotnet build --configuration Release --output ./output
           popd
 
