--- a/.github/workflows/main_func-azurenapratica-serverless-dev.yml
+++ b/.github/workflows/main_func-azurenapratica-serverless-dev.yml
@@ -29,7 +29,7 @@ jobs:
         shell: bash
         run: |
           cd ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
-          dotnet build --configuration Release --output /output
+          dotnet build --configuration Release --output output
           popd
 
       - name: 'Run Azure Functions Action'
